[package]
name = "throne"
version = "0.3.0"
description = "Game scripting language for rapid prototyping and story logic"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/throne"
readme = "README.md"
keywords = ["script", "scripting", "game", "language"]
categories = ["game-development"]
license = "MIT"
edition = "2018"
exclude = ["todo.org"]

[dependencies]
lazy_static = "1.0.0"
pest = "2.0"
pest_derive = "2.0"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1.0.3"

[dev-dependencies]
criterion = { git = "https://github.com/t-mw/criterion.rs", rev = "bb1de83" }
minifb = "0.15.1"

[[bench]]
name = "benchmark"
harness = false
