[package]
name = "throne"
version = "0.3.0"
description = "Game scripting language for rapid prototyping and story logic"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/throne"
readme = "README.md"
keywords = ["script", "scripting", "game", "language"]
categories = ["game-development"]
license = "MIT"
edition = "2018"
exclude = ["todo.org"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = "1.4"
pest = "2.1"
pest_derive = "2.1"
rand = { version = "0.8", features = ["small_rng"] }
regex = "1.4"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
criterion = "0.3"
minifb = "0.19"

[[bench]]
name = "benchmark"
harness = false
