[package]
name = "throne"
version = "0.5.0"
description = "Scripting language for game prototyping and story logic"
authors = ["Tobias Mansfield-Williams <contact@tmwhere.com>"]
repository = "https://github.com/t-mw/throne"
readme = "README.md"
keywords = ["script", "scripting", "game", "language"]
categories = ["game-development"]
license = "MIT"
edition = "2024"
exclude = ["todo.org"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
itertools = "0.14"
lazy_static = "1.5"
pest = "2.8.6"
pest_derive = "2.8.6"
rand = "0.10"
regex = "1.12.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8.2"
minifb = "0.28"
pretty_assertions = "1.4.1"

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.1", features = ["wasm_js"] }
js-sys = "0.3.85"
wasm-bindgen = "0.2.108"

[target.wasm32-unknown-unknown.dev-dependencies]
wasm-bindgen-test = "0.3.58"

[[bench]]
name = "benchmark"
harness = false
